--- a/src/app/stat-chart/stat-chart.component.html
+++ b/src/app/stat-chart/stat-chart.component.html
@@ -1,5 +1,3 @@
-<div class="col-md-4" style="text-align: center;">
-  <canvas class="chart chart-base" chart-type="type" chart-data="data" chart-series="series" chart-labels="labels">
-  </canvas>
-  <p>{{description}}</p>
-</div>
+<canvas baseChart class="chart chart-base" [chartType]="type" [data]="data" [labels]="labels" [colors]="colors">
+</canvas>
+<p>{{description}}</p>
